# slimestone-AI

./: .gitignore  LICENSE  README.md
cpp simulator/: CMakeLists.txt  README.md  VERIFICATION.md  build-cpp.sh  build-msys2.ps1  build-profile.ps1  run-cycle-test.bat  run-flyers-data.bat  run-flyers-data.sh  run-local-jsons.bat  run-local-jsons.sh  run-project-fix-errors.bat  run-project-fix-errors.sh  run-project-fixtures.bat  run-project-fixtures.sh  run-test-json-flyers.bat
cpp simulator/src/: block_registry.cpp  block_registry.h  facing.h  json_stream.cpp  json_stream.h  main.cpp  packed_pos.h  sim_event_log.cpp  sim_event_log.h  simulator.cpp  simulator.h  trace.cpp  trace.h  world.h
flyer-web-visualizer/: package-lock.json
flyer-web-visualizer/src/: MachineExplorer.svelte  TrainingDashboard.svelte
flying machines/compact/: flyers.data
flying machines/cycle-test/: simple_not_valid_cycle.json  simple_not_valid_cycle_valid-piston.json  simple_valid_cycle_non-valid-piston.json  (+1 more)
genetic algorithm/: README.md  benchmark.py  convert_fixtures_to_compact.py  convert_json_folder.py  extract_structures.py  main.py  main_ga.py  pyproject.toml
gpu simulator/: README.md  VERIFICATION.md  build-cuda.bat  build-cuda.sh  build-msys2.ps1  build.bat  build.sh  test-cuda-cycles.bat  test-cuda.bat  test-cuda.sh  test.bat  test.sh
punchster/: run_schematics.py  run_sim.py  translate_trigger.py
reinforcement learning/: compare_models.py  main_rl.py  pyproject.toml  run-rl.bat
util tools/: schematic_to_stream_json.py  verify_simulation_data.py
(+203 files in other folders)
